🔒 Security Update: Sanitize sensitive data and add comprehensive documentation
✅ Security Enhancements:
- Remove AWS account IDs and ARNs from all documentation
- Delete deployment files with sensitive information
- Add comprehensive .gitignore for sensitive files
- Create SECURITY.md with best practices

📚 Documentation Updates:
- Enhanced README.md with complete feature overview
- Sanitized deployment-guide.md with placeholders
- Added DEPLOYMENT_SUMMARY.md with architecture overview
- Updated security and performance sections

🛡️ Protected Information:
- AWS Account IDs replaced with <account-id> placeholders
- ARNs sanitized in all documentation
- Private keys and certificates excluded
- Task definitions with sensitive data removed

🎯 Production Ready:
- SSL/HTTPS configuration documented
- Load balancer setup explained
- Security best practices included
- Deployment architecture detailed

Ready for public repository with no sensitive data exposure!

--- a/.gitignore
+++ b/.gitignore
@@ -4,41 +4,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-.next/
-out/
-build/
-dist/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Docker
-.dockerignore
-
-# Logs
-logs
-*.log
-
 # Runtime data
 pids
 *.pid
@@ -47,6 +12,131 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 
-# AWS
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage
+.grunt
+
+# Bower dependency directory
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons
+build/Release
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# parcel-bundler cache
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Logs
+logs
+*.log
+
+# AWS and sensitive files
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+*task-definition*.json
+*-task-definition.json
+
+# Deployment artifacts with sensitive data
+ECS_DEPLOYMENT_SUCCESS.md
+LOAD_BALANCER_SETUP_SUCCESS.md
+SSL_HTTPS_SETUP_SUCCESS.md
+PUSH_TO_GITHUB.md
+
+# AWS credentials and config
 .aws/
+aws-credentials
+credentials
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# Docker
+.dockerignore
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*.bak
+*.backup
+*.old
